# yaflux

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  quick_start.md
src/yaflux/: __init__.py  _ast.py  _base.py  _executor.py  _loaders.py  _metadata.py  _portable.py  _results.py  _step.py  _viz.py
src/yaflux/_ast/: _assignment.py  _results.py
src/yaflux/_executor/: __init__.py  _engine.py  _error.py
src/yaflux/_graph/: _utils.py
src/yaflux/_results/: __init__.py  _error.py  _lock.py  _results.py
src/yaflux/_viz/: _check.py  _impl.py
src/yaflux/_yax/: __init__.py  _error.py  _tarfile.py  _toml.py
src/yaflux/_yax/_serializer/: __init__.py  _base.py
src/yaflux/_yax/_serializer/_formats/: __init__.py  _anndata.py  _numpy.py  _pandas.py  _pickle.py
tests/: _utils.py  build_graphs.py  dag.py  linear_deps.py  nonlinear_deps.py  serde.py  step_create.py  step_require.py  test_ast_validation.py  test_composition.py  test_execution.py  test_flags.py  test_immutability.py  test_linear_deps.py  test_mixin_composition.py  test_nonlinear_deps.py  test_optional_params.py  test_portable_load.py  test_selective_load.py  test_selective_loading_timing.py  test_step_create.py  test_step_metadata.py  test_viz.py  tracking.py
tests/test_yax/: test_yax_pandas.py
