[project]
name = "yaflux"
version = "0.1.4"
description = "A lightweight, declarative framework for python analysis workflows."
readme = "README.md"
authors = [
    { name = "noam teyssier", email = "22600644+noamteyssier@users.noreply.github.com" },
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.390", "pytest>=8.3.4", "ruff>=0.8.2"]
