[project]
name = "yaflux"
version = "0.1.9"
description = "A lightweight, declarative framework for python analysis workflows."
readme = "README.md"
authors = [
    { name = "noam teyssier", email = "22600644+noamteyssier@users.noreply.github.com" },
]
dependencies = []

[project.optional-dependencies]
viz = ["graphviz>=0.20.3"]
full = ["yaflux[viz]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=3.0.0",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.0",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx>=8.1.3",
]
