[project]
name = "yaflux"
version = "0.1.9"
description = "A lightweight, declarative framework for python analysis workflows."
readme = "README.md"
authors = [
    { name = "noam teyssier", email = "22600644+noamteyssier@users.noreply.github.com" },
]
dependencies = []

[project.optional-dependencies]
viz = ["graphviz>=0.20.3"]
full = ["yaflux[viz]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
testing = ["pytest>=8.3.4"]
linting = ["pyright>=1.1.390", "ruff>=0.8.2"]
docs = [
    "myst-parser>=4.0.0",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx>=8.1.3",
]
dev = [
    { include-group = "testing" },
    { include-group = "linting" },
    { include-group = "docs" },
]
